:sparkles: feat: adicionando bootstrap e h1 dinamicamente

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,41 @@
-<footer>
-  <p>isso é um footer</p>
-  <button>click here</button>
+<footer
+  class="
+    d-flex
+    flex-wrap
+    justify-content-between
+    align-items-center
+    p-3
+    my-4
+    border-top
+  "
+>
+  <div class="col-md-4 d-flex align-items-center">
+    <a
+      href="/"
+      class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1"
+    >
+      <svg class="bi" width="30" height="24">
+        <use xlink:href="#bootstrap"></use>
+      </svg>
+    </a>
+    <span class="mb-3 mb-md-0 text-body-secondary">Suzane Moura © 2023</span>
+  </div>
+
+  <ul class="nav col-md-4 px-5 justify-content-end list-unstyled d-flex">
+    <li class="ms-3">
+      <a class="text-body-secondary" href="#">
+        <i class="bi bi-envelope-fill"></i>
+      </a>
+    </li>
+    <li class="ms-3">
+      <a class="text-body-secondary" href="#">
+        <i class="bi bi-instagram"></i>
+      </a>
+    </li>
+    <li class="ms-3">
+      <a class="text-body-secondary" href="#">
+        <i class="bi bi-linkedin"></i>
+      </a>
+    </li>
+  </ul>
 </footer>
