--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -1,1 +1,6 @@
-<h1>Hello world!</h1>
+<main
+  class="container p-5 d-flex justify-content-center align-items-center"
+  style="height: 75vh"
+>
+  <h1>{{ title }}</h1>
+</main>
