--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,16 @@
-<header>
-  <p>isso é um header</p>
-  <button>click here</button>
+<header class="header">
+  <nav class="navbar bg-body-tertiary">
+    <div class="container-fluid px-5 py-2">
+      <a class="navbar-brand">Navbar</a>
+      <form class="d-flex" role="search">
+        <input
+          class="form-control me-2"
+          type="search"
+          placeholder="Search"
+          aria-label="Search"
+        />
+        <button class="btn btn-outline-success" type="submit">Search</button>
+      </form>
+    </div>
+  </nav>
 </header>
