--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,9 +8,14 @@
           type="search"
           placeholder="Search"
           aria-label="Search"
+          [value]="placeholder"
+          (input)="placeholder = $any($event.target).value"
         />
         <button class="btn btn-outline-success" type="submit">Search</button>
       </form>
+      <p class="pt-4">
+        Essa é a sua busca: <em>{{ placeholder }}</em>
+      </p>
     </div>
   </nav>
 </header>
